--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div><strong>Welcome to the world of Web development</strong></div>
+	<div><strong  id="Welcome to the world of Web development">Welcome to the world of Web development</strong></div>
 </body>
 
 </html>
