--- a/main.html
+++ b/main.html
@@ -14,7 +14,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<div><strong  id="Welcome to the world of Web development">Welcome to the world of Web development</strong></div>
+	<div id="text"> Welcome to the world of Web development
+		
+	</div>
 </body>
 
 </html>
